--- a/package/lrd/Config.in
+++ b/package/lrd/Config.in
@@ -26,3 +26,4 @@ source "package/lrd/sdcsdk_nm/Config.in"
 source "package/lrd/lrd-swupdate-client/Config.in"
 source "package/lrd/ig-tty-utils/Config.in"
 source "package/lrd/lrd-factory-reset-toolkit/Config.in"
+source "package/lrd/adaptive_bt/Config.in"
