--- a/package/lrd/weblcm-python/Config.in
+++ b/package/lrd/weblcm-python/Config.in
@@ -12,6 +12,7 @@ config BR2_PACKAGE_WEBLCM_PYTHON
 	select BR2_PACKAGE_PYTHON_CHERRYPY
 	select BR2_PACKAGE_ZIP
 	select BR2_PACKAGE_UNZIP
+	select BR2_PACKAGE_LIBOPENSSL_BIN
 	select BR2_PACKAGE_LRD_FACTORY_RESET_TOOLKIT
 
 
