--- a/configs/regCypress-aarch64_defconfig
+++ b/configs/regCypress-aarch64_defconfig
@@ -18,3 +18,4 @@ BR2_PACKAGE_LAIRD_FIRMWARE_BCM4343_MFG=y
 BR2_PACKAGE_LAIRD_FIRMWARE_BCM4339_MFG=y
 BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_MFG=y
 BR2_PACKAGE_WL_FMAC=y
+BR2_PACKAGE_LRU_CYPRESS=y
