Fixed wb45n and wb50n legacy builds
Bug 16184

--- a/package/lrd/lrd-radio/Config.in
+++ b/package/lrd/lrd-radio/Config.in
@@ -25,12 +25,14 @@ choice
 		select BR2_PACKAGE_WB50N_FIRMWARE_BINARIES
 		select BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES
 		select BR2_PACKAGE_LINUX_BACKPORTS
+		select BR2_PACKAGE_LRD_LEGACY
 
 	config BR2_LRD_WB45N_LEGACY_RADIO
 		bool "WB45N Radio"
 		select BR2_PACKAGE_WB45N_FIRMWARE_BINARIES
 		select BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES
 		select BR2_PACKAGE_LINUX_BACKPORTS
+		select BR2_PACKAGE_LRD_LEGACY
 endchoice
 
 config BR2_LRD_FIPS_RADIO
