--- a/configs/wb50n_legacy_defconfig
+++ b/configs/wb50n_legacy_defconfig
@@ -15,6 +15,7 @@ BR2_TARGET_GENERIC_ISSUE="Laird Connectivity"
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
 BR2_ROOTFS_DEVICE_TABLE="board/laird/device_table.txt"
 BR2_ROOTFS_MERGED_USR=y
+BR2_TARGET_GENERIC_ROOT_PASSWD="summit"
 BR2_ENABLE_LOCALE_WHITELIST="en_US"
 BR2_ROOTFS_POST_BUILD_SCRIPT="board/laird/wb50n/post_build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/laird/wb50n/post_image.sh"
@@ -28,60 +29,35 @@ BR2_PACKAGE_BUSYBOX_CONFIG="$(TOPDIR)/board/laird/configs-common/busybox_legacy.
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_GDB=y
 BR2_PACKAGE_LSOF=y
-BR2_PACKAGE_NETPERF=y
-BR2_PACKAGE_STRACE=y
-BR2_PACKAGE_WHETSTONE=y
 BR2_PACKAGE_MTD=y
-BR2_PACKAGE_I2C_TOOLS=y
-BR2_PACKAGE_LINUXCONSOLETOOLS=y
-BR2_PACKAGE_MEMTESTER=y
-BR2_PACKAGE_SETSERIAL=y
-BR2_PACKAGE_SREDIRD=y
+# BR2_PACKAGE_MTD_MTD_DEBUG is not set
+# BR2_PACKAGE_MTD_UBINIZE is not set
 BR2_PACKAGE_STATSERIAL=y
-BR2_PACKAGE_UBOOT_TOOLS=y
 BR2_PACKAGE_PHP=y
 BR2_PACKAGE_PHP_EXT_ZIP=y
 BR2_PACKAGE_PHP_EXT_JSON=y
-BR2_PACKAGE_LIBOPENSSL_1_0_2=y
+BR2_PACKAGE_LAIRD_OPENSSL_FIPS_BINARIES=y
 BR2_PACKAGE_LIBOPENSSL_BIN=y
 BR2_PACKAGE_BLUEZ5_UTILS=y
 BR2_PACKAGE_BLUEZ5_UTILS_CLIENT=y
 BR2_PACKAGE_BLUEZ5_UTILS_DEPRECATED=y
 BR2_PACKAGE_BRIDGE_UTILS=y
+BR2_PACKAGE_CHRONY=y
 BR2_PACKAGE_CONNTRACK_TOOLS=y
-BR2_PACKAGE_DHCP=y
-BR2_PACKAGE_DHCP_CLIENT=y
 BR2_PACKAGE_EBTABLES=y
 BR2_PACKAGE_EBTABLES_UTILS_RESTORE=y
 BR2_PACKAGE_ETHTOOL=y
 BR2_PACKAGE_IPERF=y
 BR2_PACKAGE_IPROUTE2=y
-BR2_PACKAGE_IPSEC_TOOLS=y
-# BR2_PACKAGE_IPSEC_TOOLS_STATS is not set
 BR2_PACKAGE_IPTABLES=y
 BR2_PACKAGE_IW=y
 BR2_PACKAGE_LIGHTTPD=y
 BR2_PACKAGE_LIGHTTPD_OPENSSL=y
-BR2_PACKAGE_LRZSZ=y
 BR2_PACKAGE_MII_DIAG=y
-BR2_PACKAGE_NCFTP=y
-# BR2_PACKAGE_NCFTP_GET is not set
-# BR2_PACKAGE_NCFTP_PUT is not set
-# BR2_PACKAGE_NCFTP_LS is not set
-# BR2_PACKAGE_NCFTP_BATCH is not set
-BR2_PACKAGE_NETSTAT_NAT=y
-BR2_PACKAGE_NTP=y
-# BR2_PACKAGE_NTP_NTPD is not set
-BR2_PACKAGE_NTP_NTPDATE=y
 BR2_PACKAGE_OPENSSH=y
 BR2_PACKAGE_PPPD=y
-BR2_PACKAGE_PROFTPD=y
-BR2_PACKAGE_RSYNC=y
-BR2_PACKAGE_SOCAT=y
 BR2_PACKAGE_TCPDUMP=y
 BR2_PACKAGE_WGET=y
-BR2_TARGET_ROOTFS_SQUASHFS=y
-BR2_TARGET_ROOTFS_SQUASHFS4_LZO=y
 BR2_TARGET_ROOTFS_TAR_BZIP2=y
 BR2_TARGET_ROOTFS_UBI=y
 BR2_TARGET_ROOTFS_UBI_SUBSIZE=0
@@ -94,9 +70,9 @@ BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_BUILD_SYSTEM_LEGACY=y
 BR2_TARGET_UBOOT_BOARDNAME="wb50n"
 BR2_LRD_WB50N_LEGACY_RADIO=y
+BR2_LRD_FIPS_RADIO=y
 BR2_PACKAGE_EVENTMON=y
 BR2_PACKAGE_PHP_SDK=y
 BR2_PACKAGE_DCAS=y
-BR2_PACKAGE_LRD_LEGACY=y
 BR2_PACKAGE_LRD_AUTOMOUNT=y
 BR2_PACKAGE_WEB_LCM=y
