--- a/package/lrd/lrd-radio/Config.in
+++ b/package/lrd/lrd-radio/Config.in
@@ -11,7 +11,7 @@ choice
 		select BR2_PACKAGE_LINUX_BACKPORTS
 		select BR2_PACKAGE_ADAPTIVE_WW_BINARIES
 		select BR2_PACKAGE_LRD_NETWORK_MANAGER
-		select BR2_PACKAGE_ADAPTIVE_BT
+		select BR2_PACKAGE_ADAPTIVE_BT if BR2_PACKAGE_BLUEZ5_UTILS || BR2_PACKAGE_BLUEZ_UTILS
 
 	config BR2_LRD_WB50N_SYSD_RADIO
 		bool "WB50N SYSD Radio"
