Laird: LWB5+: Add support for ETSI/IC/JP regulatory domains
Bug: 16308

--- a/configs/firmware_defconfig
+++ b/configs/firmware_defconfig
@@ -23,6 +23,18 @@ BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_SDIO_DIV_FCC=y
 BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_SDIO_SA_FCC=y
 BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_USB_DIV_FCC=y
 BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_USB_SA_FCC=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_SDIO_DIV_ETSI=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_SDIO_SA_ETSI=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_USB_DIV_ETSI=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_USB_SA_ETSI=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_SDIO_DIV_IC=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_SDIO_SA_IC=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_USB_DIV_IC=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_USB_SA_IC=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_SDIO_DIV_JP=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_SDIO_SA_JP=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_USB_DIV_JP=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_USB_SA_JP=y
 BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_ST60_SDIO_UART=y
 BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_ST60_SDIO_SDIO=y
 BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_ST60_PCIE_UART=y
