--- a/configs/firmware_defconfig
+++ b/configs/firmware_defconfig
@@ -35,6 +35,10 @@ BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_SDIO_DIV_JP=y
 BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_SDIO_SA_JP=y
 BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_USB_DIV_JP=y
 BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_USB_SA_JP=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_SDIO_DIV_AU=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_SDIO_SA_AU=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_USB_DIV_AU=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_USB_SA_AU=y
 BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_ST60_SDIO_UART=y
 BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_ST60_SDIO_SDIO=y
 BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_ST60_PCIE_UART=y
