--- a/package/lrd-closed-source/Config.in
+++ b/package/lrd-closed-source/Config.in
@@ -17,3 +17,4 @@ source "package/lrd-closed-source/openssl-fips/Config.in"
 source "package/lrd-closed-source/kcapi-cavs/Config.in"
 source "package/lrd-closed-source/parser-cavs/Config.in"
 source "package/lrd-closed-source/openssl-testing/Config.in"
+source "package/lrd-closed-source/lru_cypress/Config.in"
