--- a/package/lrd/weblcm-python/Config.in
+++ b/package/lrd/weblcm-python/Config.in
@@ -8,7 +8,7 @@ config BR2_PACKAGE_WEBLCM_PYTHON
 	select BR2_PACKAGE_LRD_SWUPDATE_CLIENT
 	select BR2_PACKAGE_PYTHON_SYSTEMD
 	select BR2_PACKAGE_PYTHON_NETWORKMANAGER
-	select BR2_PACKAGE_PYTHON3_SSL
+	select BR2_PACKAGE_PYTHON_PYOPENSSL
 	select BR2_PACKAGE_PYTHON_CHERRYPY
 	select BR2_PACKAGE_ZIP
 	select BR2_PACKAGE_UNZIP
