--- a/configs/som60sd_mfg_defconfig
+++ b/configs/som60sd_mfg_defconfig
@@ -36,6 +36,7 @@ BR2_PACKAGE_LZO=y
 BR2_PACKAGE_CA_CERTIFICATES=y
 BR2_PACKAGE_CRYPTODEV=y
 BR2_PACKAGE_LIBOPENSSL_BIN=y
+BR2_PACKAGE_LIBCONFIG=y
 BR2_PACKAGE_LIBCURL=y
 BR2_PACKAGE_BLUEZ5_UTILS=y
 BR2_PACKAGE_BLUEZ5_UTILS_OBEX=y
@@ -52,7 +53,6 @@ BR2_PACKAGE_IPROUTE2=y
 BR2_PACKAGE_IW=y
 BR2_PACKAGE_MII_DIAG=y
 BR2_PACKAGE_RSYNC=y
-BR2_PACKAGE_SOCAT=y
 BR2_PACKAGE_TCPDUMP=y
 BR2_PACKAGE_LOCKFILE_PROGS=y
 BR2_PACKAGE_SWUPDATE=y
