--- a/configs/som60sd_defconfig
+++ b/configs/som60sd_defconfig
@@ -74,7 +74,6 @@ BR2_PACKAGE_CA_CERTIFICATES=y
 BR2_PACKAGE_CRYPTODEV=y
 BR2_PACKAGE_LIBOPENSSL_BIN=y
 BR2_PACKAGE_SQLITE=y
-BR2_PACKAGE_LIBCONFIG=y
 BR2_PACKAGE_CAIRO=y
 BR2_PACKAGE_CAIRO_PS=y
 BR2_PACKAGE_CAIRO_SCRIPT=y
@@ -122,6 +121,7 @@ BR2_PACKAGE_NDISC6_TCPSPRAY=y
 BR2_PACKAGE_NETCAT=y
 BR2_PACKAGE_NETSTAT_NAT=y
 BR2_PACKAGE_PPPD=y
+BR2_PACKAGE_SOCAT=y
 BR2_PACKAGE_TCPDUMP=y
 BR2_PACKAGE_LOCKFILE_PROGS=y
 BR2_PACKAGE_SWUPDATE=y
