buildroot: Updates to legacy and rdvk builds
- Converted to new u-boot and bootstrap
- Added FIPS variants of legacy builds
- Fixed fw_update with rdvk builds never completeing update
- Fixed minor errors during build execution

Bug 16184

--- a/configs/wb50n_legacy_defconfig
+++ b/configs/wb50n_legacy_defconfig
@@ -21,9 +21,9 @@ BR2_ROOTFS_POST_BUILD_SCRIPT="board/laird/wb50n/post_build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/laird/wb50n/post_image.sh"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_DEFCONFIG="wb50n"
-BR2_LINUX_KERNEL_APPENDED_UIMAGE=y
-BR2_LINUX_KERNEL_LZMA=y
-BR2_LINUX_KERNEL_UIMAGE_LOADADDR="0x21000000"
+BR2_LINUX_KERNEL_IMAGE_TARGET_CUSTOM=y
+BR2_LINUX_KERNEL_IMAGE_TARGET_NAME="Image"
+BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="at91-wb50n"
 BR2_PACKAGE_BUSYBOX_CONFIG="$(TOPDIR)/board/laird/configs-common/busybox_legacy.config"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
@@ -33,11 +33,13 @@ BR2_PACKAGE_MTD=y
 # BR2_PACKAGE_MTD_MTD_DEBUG is not set
 # BR2_PACKAGE_MTD_UBINIZE is not set
 BR2_PACKAGE_STATSERIAL=y
+BR2_PACKAGE_UBOOT_TOOLS=y
+BR2_PACKAGE_USBUTILS=y
 BR2_PACKAGE_PHP=y
 BR2_PACKAGE_PHP_EXT_ZIP=y
 BR2_PACKAGE_PHP_EXT_JSON=y
-BR2_PACKAGE_LAIRD_OPENSSL_FIPS_BINARIES=y
 BR2_PACKAGE_LIBOPENSSL_BIN=y
+BR2_PACKAGE_LAIRD_OPENSSL_FIPS_BINARIES=y
 BR2_PACKAGE_BLUEZ5_UTILS=y
 BR2_PACKAGE_BLUEZ5_UTILS_CLIENT=y
 BR2_PACKAGE_BLUEZ5_UTILS_DEPRECATED=y
@@ -58,19 +60,23 @@ BR2_PACKAGE_OPENSSH=y
 BR2_PACKAGE_PPPD=y
 BR2_PACKAGE_TCPDUMP=y
 BR2_PACKAGE_WGET=y
-BR2_TARGET_ROOTFS_TAR_BZIP2=y
+# BR2_TARGET_ROOTFS_TAR is not set
 BR2_TARGET_ROOTFS_UBI=y
 BR2_TARGET_ROOTFS_UBI_SUBSIZE=0
 BR2_TARGET_ROOTFS_UBIFS_LEBSIZE=0x1f000
 BR2_TARGET_ROOTFS_UBIFS_MAXLEBCNT=955
-BR2_TARGET_ROOTFS_UBIFS_LZO=y
 BR2_TARGET_AT91BOOTSTRAP3=y
 BR2_TARGET_AT91BOOTSTRAP3_DEFCONFIG="wb50n_uboot"
 BR2_TARGET_UBOOT=y
-BR2_TARGET_UBOOT_BUILD_SYSTEM_LEGACY=y
-BR2_TARGET_UBOOT_BOARDNAME="wb50n"
+BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
+BR2_TARGET_UBOOT_CUSTOM_VERSION=y
+BR2_TARGET_UBOOT_CUSTOM_VERSION_VALUE="2018.01"
+BR2_TARGET_UBOOT_BOARD_DEFCONFIG="wb50n"
+BR2_TARGET_UBOOT_NEEDS_DTC=y
+BR2_PACKAGE_HOST_MTD=y
+BR2_PACKAGE_HOST_UBOOT_TOOLS=y
+BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SUPPORT=y
 BR2_LRD_WB50N_LEGACY_RADIO=y
-BR2_LRD_FIPS_RADIO=y
 BR2_PACKAGE_EVENTMON=y
 BR2_PACKAGE_PHP_SDK=y
 BR2_PACKAGE_DCAS=y
