--- a/configs/wb40n_rdvk_defconfig
+++ b/configs/wb40n_rdvk_defconfig
@@ -3,7 +3,6 @@ BR2_WGET="wget --passive-ftp -nd"
 BR2_DL_DIR="$(HOME)/.br2_dl_dir"
 BR2_CCACHE=y
 BR2_CCACHE_DIR="$(BR2_DL_DIR)/.buildroot-ccache"
-BR2_OPTIMIZE_3=y
 BR2_PACKAGE_OVERRIDE_FILE="$(TOPDIR)/board/laird/wb40n_rdvk/wb40n-local.mk"
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_LAIRD_ARM=y
@@ -23,9 +22,10 @@ BR2_LINUX_KERNEL_UIMAGE_LOADADDR="0x21000000"
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="at91-wb40n"
 BR2_PACKAGE_BUSYBOX_CONFIG="$(TOPDIR)/board/laird/configs-common/busybox.config"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
-BR2_PACKAGE_BZIP2=y
 BR2_PACKAGE_LSOF=y
 BR2_PACKAGE_MTD=y
+# BR2_PACKAGE_MTD_MTD_DEBUG is not set
+# BR2_PACKAGE_MTD_UBINIZE is not set
 BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_MEMTESTER=y
 BR2_PACKAGE_SETSERIAL=y
@@ -43,6 +43,7 @@ BR2_PACKAGE_BLUEZ5_UTILS_EXPERIMENTAL=y
 BR2_PACKAGE_BLUEZ5_UTILS_TEST=y
 BR2_PACKAGE_BRCM_PATCHRAM_PLUS=y
 BR2_PACKAGE_BRIDGE_UTILS=y
+BR2_PACKAGE_CHRONY=y
 BR2_PACKAGE_DNSMASQ=y
 BR2_PACKAGE_DNSMASQ_DNSSEC=y
 BR2_PACKAGE_DROPBEAR=y
@@ -71,15 +72,17 @@ BR2_PACKAGE_KMOD_TOOLS=y
 BR2_PACKAGE_UTIL_LINUX_BINARIES=y
 BR2_PACKAGE_UTIL_LINUX_HWCLOCK=y
 BR2_PACKAGE_LESS=y
-BR2_TARGET_ROOTFS_TAR_BZIP2=y
+# BR2_TARGET_ROOTFS_TAR is not set
 BR2_TARGET_ROOTFS_UBI=y
 BR2_TARGET_ROOTFS_UBIFS_MAXLEBCNT=955
-BR2_TARGET_ROOTFS_UBIFS_LZO=y
 BR2_TARGET_AT91BOOTSTRAP3=y
 BR2_TARGET_AT91BOOTSTRAP3_DEFCONFIG="wb40n_uboot"
 BR2_TARGET_UBOOT=y
-BR2_TARGET_UBOOT_BUILD_SYSTEM_LEGACY=y
-BR2_TARGET_UBOOT_BOARDNAME="wb40n"
+BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
+BR2_TARGET_UBOOT_CUSTOM_VERSION=y
+BR2_TARGET_UBOOT_CUSTOM_VERSION_VALUE="2018.01"
+BR2_TARGET_UBOOT_BOARD_DEFCONFIG="wb40n"
+BR2_TARGET_UBOOT_NEEDS_DTC=y
 BR2_PACKAGE_LRD_WIRELESS_REGDB=y
 BR2_PACKAGE_MC_MINT=y
 BR2_PACKAGE_LRD_NETWORK_MANAGER=y
