--- a/configs/wb45n_legacy_fips_defconfig
+++ b/configs/wb45n_legacy_fips_defconfig
@@ -3,8 +3,10 @@ BR2_WGET="wget --passive-ftp -nd"
 BR2_DL_DIR="$(HOME)/.br2_dl_dir"
 BR2_CCACHE=y
 BR2_CCACHE_DIR="$(BR2_DL_DIR)/.buildroot-ccache"
-BR2_PACKAGE_OVERRIDE_FILE="$(TOPDIR)/board/laird/wb45n/wb45n-local.mk"
+BR2_PACKAGE_OVERRIDE_FILE="$(TOPDIR)/board/laird/wb45n/wb45n_fips-local.mk"
+BR2_REPRODUCIBLE=y
 BR2_TOOLCHAIN_EXTERNAL=y
+BR2_TOOLCHAIN_EXTERNAL_LAIRD_ARM=y
 BR2_TARGET_GENERIC_HOSTNAME="summit"
 BR2_TARGET_GENERIC_ISSUE="Laird Connectivity"
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
@@ -16,9 +18,9 @@ BR2_ROOTFS_POST_BUILD_SCRIPT="board/laird/wb45n/post_build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/laird/wb45n/post_image.sh"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_DEFCONFIG="wb45n"
-BR2_LINUX_KERNEL_APPENDED_UIMAGE=y
-BR2_LINUX_KERNEL_LZMA=y
-BR2_LINUX_KERNEL_UIMAGE_LOADADDR="0x21000000"
+BR2_LINUX_KERNEL_IMAGE_TARGET_CUSTOM=y
+BR2_LINUX_KERNEL_IMAGE_TARGET_NAME="Image"
+BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="at91-wb45n"
 BR2_PACKAGE_BUSYBOX_CONFIG="$(TOPDIR)/board/laird/configs-common/busybox_legacy.config"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
@@ -27,8 +29,8 @@ BR2_PACKAGE_LSOF=y
 BR2_PACKAGE_MTD=y
 # BR2_PACKAGE_MTD_MTD_DEBUG is not set
 # BR2_PACKAGE_MTD_UBINIZE is not set
-BR2_PACKAGE_LAIRD_OPENSSL_FIPS_BINARIES=y
 BR2_PACKAGE_LIBOPENSSL_BIN=y
+BR2_PACKAGE_LAIRD_OPENSSL_FIPS_BINARIES=y
 BR2_PACKAGE_BLUEZ5_UTILS=y
 BR2_PACKAGE_BLUEZ5_UTILS_CLIENT=y
 BR2_PACKAGE_BLUEZ5_UTILS_DEPRECATED=y
@@ -44,21 +46,25 @@ BR2_PACKAGE_OPENSSH=y
 BR2_PACKAGE_PPPD=y
 BR2_PACKAGE_TCPDUMP=y
 BR2_PACKAGE_WGET=y
-BR2_TARGET_ROOTFS_TAR_BZIP2=y
+# BR2_TARGET_ROOTFS_TAR is not set
 BR2_TARGET_ROOTFS_UBI=y
 BR2_TARGET_ROOTFS_UBI_SUBSIZE=0
 BR2_TARGET_ROOTFS_UBIFS_LEBSIZE=0x1f000
 BR2_TARGET_ROOTFS_UBIFS_MAXLEBCNT=955
-BR2_TARGET_ROOTFS_UBIFS_LZO=y
 BR2_TARGET_AT91BOOTSTRAP3=y
 BR2_TARGET_AT91BOOTSTRAP3_DEFCONFIG="wb45n_uboot"
 BR2_TARGET_UBOOT=y
-BR2_TARGET_UBOOT_BUILD_SYSTEM_LEGACY=y
-BR2_TARGET_UBOOT_BOARDNAME="wb45n"
+BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
+BR2_TARGET_UBOOT_CUSTOM_VERSION=y
+BR2_TARGET_UBOOT_CUSTOM_VERSION_VALUE="2018.01"
+BR2_TARGET_UBOOT_BOARD_DEFCONFIG="wb45n"
+BR2_TARGET_UBOOT_NEEDS_DTC=y
+BR2_PACKAGE_HOST_MTD=y
+BR2_PACKAGE_HOST_UBOOT_TOOLS=y
+BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SUPPORT=y
 BR2_LRD_WB45N_LEGACY_RADIO=y
 BR2_LRD_FIPS_RADIO=y
 BR2_PACKAGE_EVENTMON=y
-BR2_PACKAGE_LRD_LEGACY=y
 BR2_PACKAGE_LRD_AUTOMOUNT=y
 # BR2_PACKAGE_LRD_AUTOMOUNT_MMC is not set
 BR2_PACKAGE_KCAPI_CAVS=y
