--- a/configs/wb50n_sysd_defconfig
+++ b/configs/wb50n_sysd_defconfig
@@ -28,6 +28,8 @@ BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="at91-wb50n_sysd"
 BR2_PACKAGE_BUSYBOX_CONFIG="$(TOPDIR)/board/laird/configs-common/busybox.config"
 BR2_PACKAGE_MTD=y
+# BR2_PACKAGE_MTD_MTD_DEBUG is not set
+# BR2_PACKAGE_MTD_UBINIZE is not set
 BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_LINUXCONSOLETOOLS=y
 BR2_PACKAGE_MEMTESTER=y
