--- a/configs/wb50nsd_sysd_defconfig
+++ b/configs/wb50nsd_sysd_defconfig
@@ -38,7 +38,6 @@ BR2_PACKAGE_CA_CERTIFICATES=y
 BR2_PACKAGE_CRYPTODEV=y
 BR2_PACKAGE_OPENSSL=y
 BR2_PACKAGE_LIBOPENSSL_1_0_2=y
-BR2_PACKAGE_LIBCONFIG=y
 BR2_PACKAGE_LIBCURL=y
 BR2_PACKAGE_LIBEDIT=y
 BR2_PACKAGE_BLUEZ5_UTILS=y
@@ -81,7 +80,7 @@ BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
 BR2_TARGET_UBOOT_CUSTOM_VERSION=y
 BR2_TARGET_UBOOT_CUSTOM_VERSION_VALUE="2018.01"
-BR2_TARGET_UBOOT_BOARD_DEFCONFIG="wb50nsd"
+BR2_TARGET_UBOOT_BOARD_DEFCONFIG="wb50nsd_sysd"
 BR2_TARGET_UBOOT_NEEDS_DTC=y
 # BR2_TARGET_UBOOT_FORMAT_BIN is not set
 BR2_TARGET_UBOOT_FORMAT_CUSTOM=y
