lrd-userspace-examples: add netlink example to get stations info
Reorganize the project to have networkmanager examples and netlink examples.

Bug 17109

--- a/package/lrd/lrd-userspace-examples/Config.in
+++ b/package/lrd/lrd-userspace-examples/Config.in
@@ -2,12 +2,16 @@ config BR2_PACKAGE_LRD_USERSPACE_EXAMPLES
 	bool "Laird Examples"
 	select BR2_PACKAGE_LRD_NETWORK_MANAGER
 	help
-	  Laird userspace examples for som products, including a convenience library for clients of NetworkManager etc.
+	  Laird userspace examples for som products.
 
 if BR2_PACKAGE_LRD_USERSPACE_EXAMPLES
 
-config BR2_PACKAGE_LRD_USERSPACE_EXAMPLES_EXAMPLES
-	bool "Build examples"
+config BR2_PACKAGE_LRD_USERSPACE_NETWORKMANAGER_EXAMPLES
+	bool "Build networkmanager examples"
+	default n
+
+config BR2_PACKAGE_LRD_USERSPACE_NETLINK_EXAMPLES
+	bool "Build netlink examples"
 	default n
 
 endif
