Fixed uboot config name
Bug 16184

--- a/configs/wb50n_sysd_rdvk_defconfig
+++ b/configs/wb50n_sysd_rdvk_defconfig
@@ -78,6 +78,7 @@ BR2_PACKAGE_WPA_SUPPLICANT_DBUS_INTROSPECTION=y
 BR2_PACKAGE_SWUPDATE=y
 BR2_PACKAGE_SWUPDATE_CONFIG="board/laird/configs-common/swupdate.config"
 # BR2_PACKAGE_SWUPDATE_INSTALL_WEBSITE is not set
+# BR2_PACKAGE_SYSTEMD_PSTORE is not set
 BR2_PACKAGE_SYSTEMD_HIBERNATE=y
 # BR2_PACKAGE_SYSTEMD_HWDB is not set
 BR2_PACKAGE_SYSTEMD_LOGIND=y
@@ -95,7 +96,7 @@ BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
 BR2_TARGET_UBOOT_CUSTOM_VERSION=y
 BR2_TARGET_UBOOT_CUSTOM_VERSION_VALUE="2018.01"
-BR2_TARGET_UBOOT_BOARD_DEFCONFIG="wb50n"
+BR2_TARGET_UBOOT_BOARD_DEFCONFIG="wb50n_sysd"
 BR2_TARGET_UBOOT_NEEDS_DTC=y
 # BR2_TARGET_UBOOT_FORMAT_BIN is not set
 BR2_TARGET_UBOOT_FORMAT_CUSTOM=y
