--- a/configs/wb50n_sysd_fips_defconfig
+++ b/configs/wb50n_sysd_fips_defconfig
@@ -89,7 +89,7 @@ BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
 BR2_TARGET_UBOOT_CUSTOM_VERSION=y
 BR2_TARGET_UBOOT_CUSTOM_VERSION_VALUE="2018.01"
-BR2_TARGET_UBOOT_BOARD_DEFCONFIG="wb50n"
+BR2_TARGET_UBOOT_BOARD_DEFCONFIG="wb50n_sysd"
 BR2_TARGET_UBOOT_NEEDS_DTC=y
 # BR2_TARGET_UBOOT_FORMAT_BIN is not set
 BR2_TARGET_UBOOT_FORMAT_CUSTOM=y
