Multiple changes for legacy customer builds
- Commonized post_ scripts
- Removed FIPS components from non FIPS builds
- Fixed eudev firmware load patch to not error on glib2

Bug 16178

--- a/configs/wb45n_legacy_defconfig
+++ b/configs/wb45n_legacy_defconfig
@@ -5,7 +5,6 @@ BR2_CCACHE=y
 BR2_CCACHE_DIR="$(BR2_DL_DIR)/.buildroot-ccache"
 BR2_PACKAGE_OVERRIDE_FILE="$(TOPDIR)/board/laird/wb45n/wb45n-local.mk"
 BR2_TOOLCHAIN_EXTERNAL=y
-BR2_TOOLCHAIN_EXTERNAL_LAIRD_ARM=y
 BR2_TARGET_GENERIC_HOSTNAME="summit"
 BR2_TARGET_GENERIC_ISSUE="Laird Connectivity"
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
@@ -15,6 +14,7 @@ BR2_TARGET_GENERIC_ROOT_PASSWD="summit"
 BR2_ENABLE_LOCALE_WHITELIST="en_US"
 BR2_ROOTFS_POST_BUILD_SCRIPT="board/laird/wb45n/post_build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/laird/wb45n/post_image.sh"
+BR2_ROOTFS_POST_SCRIPT_ARGS="wb45n"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_DEFCONFIG="wb45n"
 BR2_LINUX_KERNEL_IMAGE_TARGET_CUSTOM=y
@@ -29,11 +29,12 @@ BR2_PACKAGE_MTD=y
 # BR2_PACKAGE_MTD_MTD_DEBUG is not set
 # BR2_PACKAGE_MTD_UBINIZE is not set
 BR2_PACKAGE_STATSERIAL=y
+BR2_PACKAGE_UBOOT_TOOLS=y
+BR2_PACKAGE_USBUTILS=y
 BR2_PACKAGE_PHP=y
 BR2_PACKAGE_PHP_EXT_ZIP=y
 BR2_PACKAGE_PHP_EXT_JSON=y
 BR2_PACKAGE_LIBOPENSSL_BIN=y
-BR2_PACKAGE_LAIRD_OPENSSL_FIPS_BINARIES=y
 BR2_PACKAGE_BLUEZ5_UTILS=y
 BR2_PACKAGE_BLUEZ5_UTILS_CLIENT=y
 BR2_PACKAGE_BLUEZ5_UTILS_DEPRECATED=y
@@ -71,7 +72,6 @@ BR2_PACKAGE_HOST_MTD=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SUPPORT=y
 BR2_LRD_WB45N_LEGACY_RADIO=y
-BR2_LRD_FIPS_RADIO=y
 BR2_PACKAGE_EVENTMON=y
 BR2_PACKAGE_PHP_SDK=y
 BR2_PACKAGE_DCAS=y
