--- a/configs/wb45n_legacy_fips_defconfig
+++ b/configs/wb45n_legacy_fips_defconfig
@@ -6,7 +6,6 @@ BR2_CCACHE_DIR="$(BR2_DL_DIR)/.buildroot-ccache"
 BR2_PACKAGE_OVERRIDE_FILE="$(TOPDIR)/board/laird/wb45n/wb45n_fips-local.mk"
 BR2_REPRODUCIBLE=y
 BR2_TOOLCHAIN_EXTERNAL=y
-BR2_TOOLCHAIN_EXTERNAL_LAIRD_ARM=y
 BR2_TARGET_GENERIC_HOSTNAME="summit"
 BR2_TARGET_GENERIC_ISSUE="Laird Connectivity"
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
@@ -16,6 +15,7 @@ BR2_TARGET_GENERIC_ROOT_PASSWD="summit"
 BR2_ENABLE_LOCALE_WHITELIST="en_US"
 BR2_ROOTFS_POST_BUILD_SCRIPT="board/laird/wb45n/post_build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/laird/wb45n/post_image.sh"
+BR2_ROOTFS_POST_SCRIPT_ARGS="wb45n"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_DEFCONFIG="wb45n"
 BR2_LINUX_KERNEL_IMAGE_TARGET_CUSTOM=y
@@ -29,6 +29,7 @@ BR2_PACKAGE_LSOF=y
 BR2_PACKAGE_MTD=y
 # BR2_PACKAGE_MTD_MTD_DEBUG is not set
 # BR2_PACKAGE_MTD_UBINIZE is not set
+BR2_PACKAGE_USBUTILS=y
 BR2_PACKAGE_LIBOPENSSL_BIN=y
 BR2_PACKAGE_LAIRD_OPENSSL_FIPS_BINARIES=y
 BR2_PACKAGE_BLUEZ5_UTILS=y
