--- a/configs/wb50n_legacy_defconfig
+++ b/configs/wb50n_legacy_defconfig
@@ -19,6 +19,7 @@ BR2_TARGET_GENERIC_ROOT_PASSWD="summit"
 BR2_ENABLE_LOCALE_WHITELIST="en_US"
 BR2_ROOTFS_POST_BUILD_SCRIPT="board/laird/wb50n/post_build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/laird/wb50n/post_image.sh"
+BR2_ROOTFS_POST_SCRIPT_ARGS="wb50n"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_DEFCONFIG="wb50n"
 BR2_LINUX_KERNEL_IMAGE_TARGET_CUSTOM=y
@@ -39,7 +40,6 @@ BR2_PACKAGE_PHP=y
 BR2_PACKAGE_PHP_EXT_ZIP=y
 BR2_PACKAGE_PHP_EXT_JSON=y
 BR2_PACKAGE_LIBOPENSSL_BIN=y
-BR2_PACKAGE_LAIRD_OPENSSL_FIPS_BINARIES=y
 BR2_PACKAGE_BLUEZ5_UTILS=y
 BR2_PACKAGE_BLUEZ5_UTILS_CLIENT=y
 BR2_PACKAGE_BLUEZ5_UTILS_DEPRECATED=y
