--- a/board/laird/rootfs-additions-common/etc/hostapd/hostapd.conf
+++ b/board/laird/rootfs-additions-common/etc/hostapd/hostapd.conf
@@ -1,8 +1,8 @@
 # /etc/hostapd/hostapd.conf
-# defaults for WB50n
+# defaults for WBxxn
 
 interface=wlan0
-ssid=wb50n_id-not-set
+ssid=wbxxn_id-not-set
 
 # output methods syslog and stdout only useful if not in daemon mode
 #logger_syslog=-1
@@ -32,7 +32,7 @@ auth_algs=3
 ignore_broadcast_ssid=0
 
 wpa=2
-wpa_passphrase=lairdtech
+wpa_passphrase=lairdconnect
 wpa_key_mgmt=WPA-PSK
 rsn_pairwise=CCMP
 
