--- a/configs/wb40n_rdvk_defconfig
+++ b/configs/wb40n_rdvk_defconfig
@@ -14,6 +14,7 @@ BR2_ROOTFS_MERGED_USR=y
 BR2_ENABLE_LOCALE_WHITELIST="en_US"
 BR2_ROOTFS_POST_BUILD_SCRIPT="board/laird/wb40n_rdvk/post_build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/laird/wb40n_rdvk/post_image.sh"
+BR2_ROOTFS_POST_SCRIPT_ARGS="wb40n"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_DEFCONFIG="wb40n_rdvk"
 BR2_LINUX_KERNEL_APPENDED_UIMAGE=y
