--- a/configs/wb50n_rdvk_defconfig
+++ b/configs/wb50n_rdvk_defconfig
@@ -18,6 +18,7 @@ BR2_ROOTFS_MERGED_USR=y
 BR2_ENABLE_LOCALE_WHITELIST="en_US"
 BR2_ROOTFS_POST_BUILD_SCRIPT="board/laird/wb50n_rdvk/post_build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/laird/wb50n_rdvk/post_image.sh"
+BR2_ROOTFS_POST_SCRIPT_ARGS="wb50n"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_DEFCONFIG="wb50n_rdvk"
 BR2_LINUX_KERNEL_IMAGE_TARGET_CUSTOM=y
