--- a/package/lrd/lrd-radio/Config.in
+++ b/package/lrd/lrd-radio/Config.in
@@ -42,11 +42,15 @@ config BR2_LRD_FIPS_RADIO
 	select BR2_PACKAGE_UBOOT_TOOLS_DUMPIMAGE
 
 comment "Please config openssl in Target packages->Libraries/Crypto/Openssl"
-depends on !BR2_LRD_NO_RADIO
+	depends on !BR2_LRD_NO_RADIO
+
 comment "Please config linux-backports in Target packages->Hardware handling->linux-backports"
-depends on !BR2_LRD_NO_RADIO
+	depends on !BR2_LRD_NO_RADIO
+
 comment "Please config lrd-network-manager in Laird->Packages->lrd-networkmanager"
-depends on !BR2_LRD_NO_RADIO && !BR2_LRD_WB50N_LEGACY_RADIO && !BR2_LRD_WB45N_LEGACY_RADIO
+	depends on !BR2_LRD_NO_RADIO
+	depends on !BR2_LRD_WB50N_LEGACY_RADIO
+	depends on !BR2_LRD_WB45N_LEGACY_RADIO
 
 config BR2_PACKAGE_LRD_60_RADIO_STACK_VERSION_VALUE
 	string "SOM60 radio stack version"
