--- a/package/lrd/lrd-radio/summit-supplicant-binaries/Config.in
+++ b/package/lrd/lrd-radio/summit-supplicant-binaries/Config.in
@@ -1,5 +1,5 @@
 config BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES
-	bool "SOM60 Summit Supplicant ARM EABIHF Binaries Installer"
+	bool "Summit Supplicant Binaries Installer"
 	select BR2_PACKAGE_LIBNL
 	select BR2_PACKAGE_DBUS
 	select BR2_PACKAGE_OPENSSL
