Multiple fixes to FIPS for legacy builds
- Added FIPS build checks to legacy builds
- Added missing eabihf legacy summit supplicant
- Fixed OpenSSL used for the non FIPS supplicants
- Fixed fipscheck dependencies

Bug 16178

--- a/package/lrd/fipscheck/Config.in
+++ b/package/lrd/fipscheck/Config.in
@@ -1,5 +1,6 @@
 config BR2_PACKAGE_FIPSCHECK
 	bool "fipscheck"
+	select BR2_PACKAGE_OPENSSL
 	default y if BR2_LRD_FIPS_RADIO
 	help
 	  FIPS Integrity Checker
