--- a/configs/som60x2_rdvk_defconfig
+++ b/configs/som60x2_rdvk_defconfig
@@ -69,6 +69,7 @@ BR2_PACKAGE_IPROUTE2=y
 BR2_PACKAGE_IPSEC_TOOLS=y
 BR2_PACKAGE_IW=y
 BR2_PACKAGE_MII_DIAG=y
+BR2_PACKAGE_NFTABLES=y
 BR2_PACKAGE_PPPD=y
 BR2_PACKAGE_TCPDUMP=y
 BR2_PACKAGE_WIRELESS_REGDB=y
