SOM60x2 RDVK: add additional LWB5plus firmware images to RDVK build
The following 8 additional firmware packages should be included:

laird-lwb5plus-sdio-div-au-firmware
laird-lwb5plus-sdio-div-etsi-firmware
laird-lwb5plus-sdio-div-ic-firmware
laird-lwb5plus-sdio-div-jp-firmware
laird-lwb5plus-sdio-sa-au-firmware
laird-lwb5plus-sdio-sa-etsi-firmware
laird-lwb5plus-sdio-sa-ic-firmware
laird-lwb5plus-sdio-sa-jp-firmware

Bug 17353

--- a/configs/som60x2_rdvk_defconfig
+++ b/configs/som60x2_rdvk_defconfig
@@ -118,6 +118,22 @@ BR2_PACKAGE_LAIRD_FIRMWARE=y
 BR2_PACKAGE_LAIRD_FIRMWARE_AR6004=y
 BR2_PACKAGE_LAIRD_FIRMWARE_BCM4343=y
 BR2_PACKAGE_LAIRD_FIRMWARE_BCM4339=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_SDIO_DIV_ETSI=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_SDIO_SA_ETSI=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_USB_DIV_ETSI=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_USB_SA_ETSI=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_SDIO_DIV_IC=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_SDIO_SA_IC=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_USB_DIV_IC=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_USB_SA_IC=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_SDIO_DIV_JP=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_SDIO_SA_JP=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_USB_DIV_JP=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_USB_SA_JP=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_SDIO_DIV_AU=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_SDIO_SA_AU=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_USB_DIV_AU=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_USB_SA_AU=y
 BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_SDIO_DIV_FCC=y
 BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_SDIO_SA_FCC=y
 BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_USB_DIV_FCC=y
