--- a/package/lrd/lrd-radio/adaptive_ww-binaries/Config.in
+++ b/package/lrd/lrd-radio/adaptive_ww-binaries/Config.in
@@ -10,7 +10,7 @@ config BR2_PACKAGE_ADAPTIVE_WW_BINARIES
 if BR2_PACKAGE_ADAPTIVE_WW_BINARIES
 config BR2_PACKAGE_ADAPTIVE_WW_BINARIES_OPENSSL
 	string
-	default "_openssl_1_0_2" if BR2_PACKAGE_LIBOPENSSL_1_0_2 && BR2_PACKAGE_LAIRD_OPENSSL_FIPS_BINARIES
+	default "_openssl_1_0_2" if BR2_PACKAGE_LIBOPENSSL_1_0_2 || BR2_PACKAGE_LAIRD_OPENSSL_FIPS_BINARIES
 
 config BR2_PACKAGE_ADAPTIVE_WW_BINARIES_REGPWRDB
 	bool "Adaptive World Mode Regulatory Powers Database"
