Use iptables instead of nftables
Bug 17337

--- a/configs/som60x2_rdvk_defconfig
+++ b/configs/som60x2_rdvk_defconfig
@@ -67,9 +67,9 @@ BR2_PACKAGE_IPERF=y
 BR2_PACKAGE_IPERF3=y
 BR2_PACKAGE_IPROUTE2=y
 BR2_PACKAGE_IPSEC_TOOLS=y
+BR2_PACKAGE_IPTABLES=y
 BR2_PACKAGE_IW=y
 BR2_PACKAGE_MII_DIAG=y
-BR2_PACKAGE_NFTABLES=y
 BR2_PACKAGE_PPPD=y
 BR2_PACKAGE_TCPDUMP=y
 BR2_PACKAGE_WIRELESS_REGDB=y
@@ -118,6 +118,10 @@ BR2_PACKAGE_LAIRD_FIRMWARE=y
 BR2_PACKAGE_LAIRD_FIRMWARE_AR6004=y
 BR2_PACKAGE_LAIRD_FIRMWARE_BCM4343=y
 BR2_PACKAGE_LAIRD_FIRMWARE_BCM4339=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_SDIO_DIV_FCC=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_SDIO_SA_FCC=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_USB_DIV_FCC=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_USB_SA_FCC=y
 BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_SDIO_DIV_ETSI=y
 BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_SDIO_SA_ETSI=y
 BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_USB_DIV_ETSI=y
@@ -134,10 +138,6 @@ BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_SDIO_DIV_AU=y
 BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_SDIO_SA_AU=y
 BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_USB_DIV_AU=y
 BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_USB_SA_AU=y
-BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_SDIO_DIV_FCC=y
-BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_SDIO_SA_FCC=y
-BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_USB_DIV_FCC=y
-BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_USB_SA_FCC=y
 BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_ST60_SDIO_UART=y
 BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_ST60_SDIO_SDIO=y
 BR2_PACKAGE_LAIRD_FIRMWARE_LRDMWL_ST60_USB_UART=y
