--- a/configs/regLWB5plus-aarch64_defconfig
+++ b/configs/regLWB5plus-aarch64_defconfig
@@ -1,4 +1,4 @@
-BR2_arm=y
+BR2_aarch64=y
 BR2_WGET="wget --passive-ftp -nd"
 BR2_DL_DIR="$(HOME)/.br2_dl_dir"
 BR2_CCACHE=y
@@ -14,6 +14,5 @@ BR2_ROOTFS_POST_IMAGE_SCRIPT="board/laird/mfg-reg/post_image.sh"
 # BR2_PACKAGE_BUSYBOX is not set
 # BR2_TARGET_ROOTFS_TAR is not set
 BR2_PACKAGE_LAIRD_FIRMWARE=y
-BR2_PACKAGE_LAIRD_FIRMWARE_BCM4343_MFG=y
-BR2_PACKAGE_LAIRD_FIRMWARE_BCM4339_MFG=y
-BR2_PACKAGE_WL_FMAC=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_MFG=y
+BR2_PACKAGE_LRU_CYPRESS=y
