--- a/configs/regLWB5plus-arm-eabihf_defconfig
+++ b/configs/regLWB5plus-arm-eabihf_defconfig
@@ -1,4 +1,7 @@
 BR2_arm=y
+BR2_cortex_a5=y
+BR2_ARM_ENABLE_VFP=y
+BR2_ARM_FPU_VFPV2=y
 BR2_WGET="wget --passive-ftp -nd"
 BR2_DL_DIR="$(HOME)/.br2_dl_dir"
 BR2_CCACHE=y
@@ -14,6 +17,5 @@ BR2_ROOTFS_POST_IMAGE_SCRIPT="board/laird/mfg-reg/post_image.sh"
 # BR2_PACKAGE_BUSYBOX is not set
 # BR2_TARGET_ROOTFS_TAR is not set
 BR2_PACKAGE_LAIRD_FIRMWARE=y
-BR2_PACKAGE_LAIRD_FIRMWARE_BCM4343_MFG=y
-BR2_PACKAGE_LAIRD_FIRMWARE_BCM4339_MFG=y
-BR2_PACKAGE_WL_FMAC=y
+BR2_PACKAGE_LAIRD_FIRMWARE_BCM4373_MFG=y
+BR2_PACKAGE_LRU_CYPRESS=y
