Fixed toolchain to use proper kernel headers for the FIPS builds
Bug 17520

--- a/configs/wb4x_toolchain_defconfig
+++ b/configs/wb4x_toolchain_defconfig
@@ -4,6 +4,9 @@ BR2_CCACHE=y
 BR2_CCACHE_DIR="$(BR2_DL_DIR)/.buildroot-ccache"
 BR2_TOOLCHAIN_BUILDROOT_VENDOR="laird"
 BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
+BR2_KERNEL_HEADERS_VERSION=y
+BR2_DEFAULT_KERNEL_VERSION="4.19.76"
+BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_19=y
 BR2_BINUTILS_VERSION_2_31_X=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_GCC_ENABLE_LTO=y
