Initial implementation on WB60 with new modem
Bug 15135

--- a/configs/wb60u_defconfig
+++ b/configs/wb60u_defconfig
@@ -25,13 +25,14 @@ BR2_LINUX_KERNEL_DEFCONFIG="wb60"
 BR2_LINUX_KERNEL_IMAGE_TARGET_CUSTOM=y
 BR2_LINUX_KERNEL_IMAGE_TARGET_NAME="Image"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
-BR2_LINUX_KERNEL_INTREE_DTS_NAME="at91-dvk_wb60"
+BR2_LINUX_KERNEL_INTREE_DTS_NAME="at91-dvk_wb60u"
 BR2_PACKAGE_BUSYBOX_CONFIG="$(TOPDIR)/board/laird/configs-common/busybox.config"
 BR2_PACKAGE_MTD=y
 BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_LINUXCONSOLETOOLS=y
 BR2_PACKAGE_MEMTESTER=y
 BR2_PACKAGE_OFONO=y
+BR2_PACKAGE_PICOCOM=y
 BR2_PACKAGE_SETSERIAL=y
 BR2_PACKAGE_UBOOT_TOOLS=y
 BR2_PACKAGE_CA_CERTIFICATES=y
@@ -61,6 +62,7 @@ BR2_PACKAGE_IW=y
 BR2_PACKAGE_MII_DIAG=y
 BR2_PACKAGE_NETCAT=y
 BR2_PACKAGE_NETSTAT_NAT=y
+BR2_PACKAGE_SOCAT=y
 BR2_PACKAGE_TCPDUMP=y
 BR2_PACKAGE_LOCKFILE_PROGS=y
 BR2_PACKAGE_SWUPDATE=y
