--- a/configs/wb60usd_defconfig
+++ b/configs/wb60usd_defconfig
@@ -15,23 +15,22 @@ BR2_TARGET_GENERIC_ISSUE="Laird Connectivity"
 BR2_INIT_SYSTEMD=y
 BR2_ROOTFS_DEVICE_TABLE="board/laird/device_table.txt"
 BR2_TARGET_GENERIC_ROOT_PASSWD="summit"
-# BR2_TARGET_GENERIC_REMOUNT_ROOTFS_RW is not set
 BR2_ENABLE_LOCALE_WHITELIST="en_US"
 BR2_ROOTFS_POST_BUILD_SCRIPT="board/laird/som60/post_build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/laird/som60/post_image.sh"
-BR2_ROOTFS_POST_SCRIPT_ARGS="som60 board/laird/configs-common/keys"
+BR2_ROOTFS_POST_SCRIPT_ARGS="som60sd board/laird/configs-common/keys"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_DEFCONFIG="wb60"
 BR2_LINUX_KERNEL_IMAGE_TARGET_CUSTOM=y
 BR2_LINUX_KERNEL_IMAGE_TARGET_NAME="Image"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
-BR2_LINUX_KERNEL_INTREE_DTS_NAME="at91-dvk_wb60"
+BR2_LINUX_KERNEL_INTREE_DTS_NAME="at91-dvk_wb60u"
 BR2_PACKAGE_BUSYBOX_CONFIG="$(TOPDIR)/board/laird/configs-common/busybox.config"
 BR2_PACKAGE_MTD=y
-BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_LINUXCONSOLETOOLS=y
 BR2_PACKAGE_MEMTESTER=y
 BR2_PACKAGE_OFONO=y
+BR2_PACKAGE_PICOCOM=y
 BR2_PACKAGE_SETSERIAL=y
 BR2_PACKAGE_UBOOT_TOOLS=y
 BR2_PACKAGE_CA_CERTIFICATES=y
@@ -61,6 +60,7 @@ BR2_PACKAGE_IW=y
 BR2_PACKAGE_MII_DIAG=y
 BR2_PACKAGE_NETCAT=y
 BR2_PACKAGE_NETSTAT_NAT=y
+BR2_PACKAGE_SOCAT=y
 BR2_PACKAGE_TCPDUMP=y
 BR2_PACKAGE_LOCKFILE_PROGS=y
 BR2_PACKAGE_SWUPDATE=y
@@ -77,14 +77,11 @@ BR2_PACKAGE_SYSTEMD_LOGIND=y
 # BR2_PACKAGE_SYSTEMD_VCONSOLE is not set
 BR2_PACKAGE_UTIL_LINUX_HWCLOCK=y
 BR2_PACKAGE_LESS=y
-BR2_TARGET_ROOTFS_SQUASHFS=y
-BR2_TARGET_ROOTFS_SQUASHFS4_LZO=y
-# BR2_TARGET_ROOTFS_TAR is not set
 BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
 BR2_TARGET_UBOOT_CUSTOM_VERSION=y
 BR2_TARGET_UBOOT_CUSTOM_VERSION_VALUE="2018.01"
-BR2_TARGET_UBOOT_BOARD_DEFCONFIG="wb60"
+BR2_TARGET_UBOOT_BOARD_DEFCONFIG="wb60sd"
 BR2_TARGET_UBOOT_NEEDS_DTC=y
 # BR2_TARGET_UBOOT_FORMAT_BIN is not set
 BR2_TARGET_UBOOT_FORMAT_CUSTOM=y
@@ -92,6 +89,7 @@ BR2_TARGET_UBOOT_FORMAT_CUSTOM_NAME="u-boot.dtb u-boot-nodtb.bin"
 BR2_TARGET_UBOOT_SPL=y
 BR2_TARGET_UBOOT_SPL_NAME="spl/u-boot-spl-nodtb.bin spl/u-boot-spl.dtb"
 BR2_PACKAGE_HOST_CRYPTSETUP=y
+BR2_PACKAGE_HOST_E2FSPROGS=y
 BR2_PACKAGE_HOST_MTD=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SUPPORT=y
@@ -100,7 +98,5 @@ BR2_LRD_SOM60_RADIO=y
 BR2_PACKAGE_MC_MINT=y
 BR2_PACKAGE_LRD_NETWORK_MANAGER_MODEM_MANAGER=y
 BR2_PACKAGE_LRD_NETWORK_MANAGER_PPPD=y
-BR2_PACKAGE_LRD_AUTOMOUNT=y
-# BR2_PACKAGE_LRD_AUTOMOUNT_USB is not set
 BR2_PACKAGE_LRD_USBGADGET=y
-BR2_PACKAGE_LRD_ENCRYPTED_STORAGE_TOOLKIT=y
+BR2_PACKAGE_LRD_FACTORY_RESET_TOOLKIT=y
