Added support for serial ports in USB gadget
Converted Legacy builds to USB Gadget package
Gadget configuration now performed from /etc/default/usb-gadget
file not service parameters

Bug 17598

--- a/configs/wb45n_legacy_defconfig
+++ b/configs/wb45n_legacy_defconfig
@@ -77,3 +77,4 @@ BR2_PACKAGE_PHP_SDK=y
 BR2_PACKAGE_DCAS=y
 BR2_PACKAGE_LRD_AUTOMOUNT=y
 # BR2_PACKAGE_LRD_AUTOMOUNT_MMC is not set
+BR2_PACKAGE_LRD_USBGADGET=y
