--- a/configs/wb60u_defconfig
+++ b/configs/wb60u_defconfig
@@ -105,4 +105,5 @@ BR2_PACKAGE_LRD_NETWORK_MANAGER_PPPD=y
 BR2_PACKAGE_LRD_AUTOMOUNT=y
 # BR2_PACKAGE_LRD_AUTOMOUNT_USB is not set
 BR2_PACKAGE_LRD_USBGADGET=y
+BR2_PACKAGE_LRD_USBGADGET_SERIAL_PORTS=2
 BR2_PACKAGE_LRD_ENCRYPTED_STORAGE_TOOLKIT=y
