--- a/configs/wb60usd_defconfig
+++ b/configs/wb60usd_defconfig
@@ -99,4 +99,5 @@ BR2_PACKAGE_MC_MINT=y
 BR2_PACKAGE_LRD_NETWORK_MANAGER_MODEM_MANAGER=y
 BR2_PACKAGE_LRD_NETWORK_MANAGER_PPPD=y
 BR2_PACKAGE_LRD_USBGADGET=y
+BR2_PACKAGE_LRD_USBGADGET_SERIAL_PORTS=2
 BR2_PACKAGE_LRD_FACTORY_RESET_TOOLKIT=y
