--- a/configs/wb45n_legacy_fips_defconfig
+++ b/configs/wb45n_legacy_fips_defconfig
@@ -68,6 +68,7 @@ BR2_LRD_FIPS_RADIO=y
 BR2_PACKAGE_EVENTMON=y
 BR2_PACKAGE_LRD_AUTOMOUNT=y
 # BR2_PACKAGE_LRD_AUTOMOUNT_MMC is not set
+BR2_PACKAGE_LRD_USBGADGET=y
 BR2_PACKAGE_KCAPI_CAVS=y
 BR2_PACKAGE_PARSER_CAVS=y
 BR2_PACKAGE_OPENSSL_TESTING=y
