--- a/configs/wb50n_legacy_defconfig
+++ b/configs/wb50n_legacy_defconfig
@@ -81,4 +81,5 @@ BR2_PACKAGE_EVENTMON=y
 BR2_PACKAGE_PHP_SDK=y
 BR2_PACKAGE_DCAS=y
 BR2_PACKAGE_LRD_AUTOMOUNT=y
+BR2_PACKAGE_LRD_USBGADGET=y
 BR2_PACKAGE_WEB_LCM=y
