--- a/package/lrd/lrd-usbgadget/Config.in
+++ b/package/lrd/lrd-usbgadget/Config.in
@@ -5,10 +5,15 @@ menuconfig BR2_PACKAGE_LRD_USBGADGET
 
 if BR2_PACKAGE_LRD_USBGADGET
 choice BR2_PACKAGE_LRD_USBGADGET_TYPE
-	prompt "USB Gadget Type"
+	prompt "USB Gadget Ethernet Type"
 	default BR2_PACKAGE_LRD_USBGADGET_TYPE_RNDIS
 	help
 	  Laird USB Ethernet Gadget Type
+
+config BR2_PACKAGE_LRD_USBGADGET_TYPE_NONE
+	bool "None"
+	help
+	  Laird RNDIS USB Ethernet Gadget None
 
 config BR2_PACKAGE_LRD_USBGADGET_TYPE_RNDIS
 	bool "RNDIS"
@@ -26,5 +31,9 @@ config BR2_PACKAGE_LRD_USBGADGET_TYPE_STRING
 	string
 	default "rndis" if BR2_PACKAGE_LRD_USBGADGET_TYPE_RNDIS
 	default "ncm"   if BR2_PACKAGE_LRD_USBGADGET_TYPE_NCM
+
+config BR2_PACKAGE_LRD_USBGADGET_SERIAL_PORTS
+	int "USB Gadget Serial ports"
+	default 0
 
 endif
