--- a/package/lrd/lrd-radio/summit-supplicant-binaries/Config.in
+++ b/package/lrd/lrd-radio/summit-supplicant-binaries/Config.in
@@ -3,6 +3,7 @@ config BR2_PACKAGE_SUMMIT_SUPPLICANT_BINARIES
 	select BR2_PACKAGE_LIBNL
 	select BR2_PACKAGE_DBUS
 	select BR2_PACKAGE_OPENSSL
+	select BR2_PACKAGE_LIBEDIT if BR2_PACKAGE_LRD_LEGACY
 	select BR2_PACKAGE_SDCSUPP if BR2_LRD_DEVEL_BUILD
 	select BR2_PACKAGE_SDCSUPP_WPA_CLI if BR2_LRD_DEVEL_BUILD
 	select BR2_PACKAGE_SDCSUPP_LEGACY if BR2_LRD_DEVEL_BUILD && BR2_PACKAGE_LRD_LEGACY
