Prevent SMU from being built with the sdcsdk for network manager

--- a/package/lrd-closed-source/sdccli/Config.in
+++ b/package/lrd-closed-source/sdccli/Config.in
@@ -10,6 +10,7 @@ if BR2_PACKAGE_SDCCLI
 
 config BR2_PACKAGE_SDCCLI_SMU_CLI
 	bool "Install smu_cli binary"
+	depends on !BR2_PACKAGE_SDCSDK_NM
 	help
 	  Install smu_cli command line utility
 
