Added suport for Xmodem to the wb60u builds
Bug 15135

--- a/configs/wb60u_defconfig
+++ b/configs/wb60u_defconfig
@@ -28,7 +28,6 @@ BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="at91-dvk_wb60u"
 BR2_PACKAGE_BUSYBOX_CONFIG="$(TOPDIR)/board/laird/configs-common/busybox.config"
 BR2_PACKAGE_MTD=y
-BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_LINUXCONSOLETOOLS=y
 BR2_PACKAGE_MEMTESTER=y
 BR2_PACKAGE_OFONO=y
@@ -59,6 +58,7 @@ BR2_PACKAGE_IPROUTE2=y
 BR2_PACKAGE_IPSEC_TOOLS=y
 # BR2_PACKAGE_IPSEC_TOOLS_STATS is not set
 BR2_PACKAGE_IW=y
+BR2_PACKAGE_LRZSZ=y
 BR2_PACKAGE_MII_DIAG=y
 BR2_PACKAGE_NETCAT=y
 BR2_PACKAGE_NETSTAT_NAT=y
