--- a/configs/wb60usd_defconfig
+++ b/configs/wb60usd_defconfig
@@ -57,6 +57,7 @@ BR2_PACKAGE_IPROUTE2=y
 BR2_PACKAGE_IPSEC_TOOLS=y
 # BR2_PACKAGE_IPSEC_TOOLS_STATS is not set
 BR2_PACKAGE_IW=y
+BR2_PACKAGE_LRZSZ=y
 BR2_PACKAGE_MII_DIAG=y
 BR2_PACKAGE_NETCAT=y
 BR2_PACKAGE_NETSTAT_NAT=y
