--- a/configs/reg50n-arm-eabi_defconfig
+++ b/configs/reg50n-arm-eabi_defconfig
@@ -17,6 +17,7 @@ BR2_PACKAGE_READLINE=y
 # BR2_TARGET_ROOTFS_TAR is not set
 BR2_PACKAGE_SDCSDK=y
 BR2_PACKAGE_SDCCLI=y
+# BR2_PACKAGE_SDCCLI_SDC_CLI is not set
 BR2_PACKAGE_SDCCLI_SMU_CLI=y
 BR2_PACKAGE_LAIRD_FIRMWARE=y
 BR2_PACKAGE_LAIRD_FIRMWARE_AR6004_MFG=y
