Fixed multiple fw_update/fw_select issues
- More robust parsing of bootcmd
- Supressed errors when S45ppp used with monolithic kernel
- Added pgrep utility to be used in the scripts

Bug 17689, 17271

--- a/configs/wb45n_legacy_defconfig
+++ b/configs/wb45n_legacy_defconfig
@@ -44,6 +44,7 @@ BR2_PACKAGE_CONNTRACK_TOOLS=y
 BR2_PACKAGE_EBTABLES=y
 BR2_PACKAGE_EBTABLES_UTILS_RESTORE=y
 BR2_PACKAGE_ETHTOOL=y
+# BR2_PACKAGE_IFUPDOWN_SCRIPTS is not set
 BR2_PACKAGE_IPERF=y
 BR2_PACKAGE_IPROUTE2=y
 BR2_PACKAGE_IPTABLES=y
