Added ability customize USB gadget MACs from defconfig
Bug 17733

--- a/package/lrd/lrd-usbgadget/Config.in
+++ b/package/lrd/lrd-usbgadget/Config.in
@@ -27,6 +27,20 @@ config BR2_PACKAGE_LRD_USBGADGET_TYPE_NCM
 
 endchoice
 
+if !BR2_PACKAGE_LRD_USBGADGET_TYPE_NONE
+config BR2_PACKAGE_LRD_USBGADGET_LOCAL_MAC
+	string "USB Ethernet Gadget local MAC address"
+	default "DE:AD:BE:EF:00:00"
+	help
+	  USB Ethernet Gadget local MAC address
+
+config BR2_PACKAGE_LRD_USBGADGET_REMOTE_MAC
+	string "USB Ethernet Gadget remote MAC address"
+	default "DE:AD:BE:EF:00:01"
+	help
+	  USB Ethernet Gadget remote MAC address
+endif
+
 config BR2_PACKAGE_LRD_USBGADGET_TYPE_STRING
 	string
 	default "rndis" if BR2_PACKAGE_LRD_USBGADGET_TYPE_RNDIS
