--- a/package/lrd/lrd-usbgadget/usb-gadget.service
+++ b/package/lrd/lrd-usbgadget/usb-gadget.service
@@ -3,8 +3,7 @@ Description=Create USB Ethernet Gadget
 
 [Service]
 RemainAfterExit=yes
-EnvironmentFile=/etc/default/usb-gadget
-ExecStart=/usr/bin/usb-gadget.sh start "${USB_GADGET_ETHER}" "${USB_GADGET_SERIAL_PORTS}"
+ExecStart=/usr/bin/usb-gadget.sh start
 ExecStop=/usr/bin/usb-gadget.sh stop
 
 [Install]
