Create shell script to toggle different FIPS modes on 60SOM/WB50sysd
This shell script should allow an easy way via the CLI to toggle the
fips=0/1 and fips_wifi=0/1 portion of the uboot env bootargs

Bug 17721

--- a/package/lrd/lrd-radio/Config.in
+++ b/package/lrd/lrd-radio/Config.in
@@ -40,6 +40,7 @@ config BR2_LRD_FIPS_RADIO
 	depends on !BR2_LRD_NO_RADIO
 	select BR2_PACKAGE_UBOOT_TOOLS
 	select BR2_PACKAGE_UBOOT_TOOLS_DUMPIMAGE
+	select BR2_PACKAGE_LRD_FIPS_UTILS
 
 comment "Please config openssl in Target packages->Libraries/Crypto/Openssl"
 	depends on !BR2_LRD_NO_RADIO
