--- a/package/lrd/lrd-legacy/Config.in
+++ b/package/lrd/lrd-legacy/Config.in
@@ -1,4 +1,6 @@
 config BR2_PACKAGE_LRD_LEGACY
 	bool "lrd-legacy"
+	select BR2_PACKAGE_DHCPCD
+	select BR2_PACKAGE_OPENRESOLV
 	help
 	  Laird legacy software
