Optimized PPP and removed regdb from CRDA
regdb is shipped with firmware, so remove other sources

Bug 17916

--- a/package/crda/Config.in
+++ b/package/crda/Config.in
@@ -6,7 +6,7 @@ config BR2_PACKAGE_CRDA
 	select BR2_PACKAGE_LIBGCRYPT
 	select BR2_PACKAGE_LIBNL
 	# regdb is a runtime dependency
-	select BR2_PACKAGE_WIRELESS_REGDB
+	#select BR2_PACKAGE_WIRELESS_REGDB
 	help
 	  Central Regulatory Domain Agent.
 
