--- a/configs/wb45n_legacy_fips_defconfig
+++ b/configs/wb45n_legacy_fips_defconfig
@@ -17,7 +17,7 @@ BR2_ROOTFS_POST_BUILD_SCRIPT="board/laird/wb45n/post_build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/laird/wb45n/post_image.sh"
 BR2_ROOTFS_POST_SCRIPT_ARGS="wb45n"
 BR2_LINUX_KERNEL=y
-BR2_LINUX_KERNEL_DEFCONFIG="wb45n"
+BR2_LINUX_KERNEL_DEFCONFIG="wb45n_fips"
 BR2_LINUX_KERNEL_IMAGE_TARGET_CUSTOM=y
 BR2_LINUX_KERNEL_IMAGE_TARGET_NAME="Image"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
