buildroot: Added removing Bluetooth support when BlueZ disabled
Bug 14020

--- a/package/lrd/lrd-radio/Config.in
+++ b/package/lrd/lrd-radio/Config.in
@@ -35,6 +35,10 @@ choice
 		select BR2_PACKAGE_LRD_LEGACY
 endchoice
 
+config BR2_LRD_WB50N_RADIO
+	bool
+	default y if BR2_LRD_WB50N_SYSD_RADIO || BR2_LRD_WB50N_LEGACY_RADIO
+
 config BR2_LRD_FIPS_RADIO
 	bool "Use FIPS Radio"
 	depends on !BR2_LRD_NO_RADIO
@@ -78,7 +82,7 @@ config BR2_PACKAGE_LRD_RADIO_STACK_VERSION_VALUE
 	string
 	depends on !BR2_LRD_NO_RADIO
 	default BR2_PACKAGE_LRD_60_RADIO_STACK_VERSION_VALUE if BR2_LRD_SOM60_RADIO
-	default BR2_PACKAGE_LRD_50_RADIO_STACK_VERSION_VALUE if BR2_LRD_WB50N_SYSD_RADIO || BR2_LRD_WB50N_LEGACY_RADIO
+	default BR2_PACKAGE_LRD_50_RADIO_STACK_VERSION_VALUE if BR2_LRD_WB50N_RADIO
 	default BR2_PACKAGE_LRD_45_RADIO_STACK_VERSION_VALUE if BR2_LRD_WB45N_LEGACY_RADIO
 
 config BR2_PACKAGE_LRD_RADIO_STACK_ARCH
